--- a/static/lang/en.json
+++ b/static/lang/en.json
@@ -19,6 +19,6 @@
   },
   "footer": {
     "madeBy": "Made by the exile Razielini",
-    "disclaimer": "This site is fan-made and not affiliated with Grinding Gear Games in any way."
+    "disclaimer": "This site is fan-made and not afiliated with Grinding Gear Games in any way."
   }
 }
