--- a/static/lang/es.json
+++ b/static/lang/es.json
@@ -4,7 +4,7 @@
   "reward": "Recompensa",
   "stack": "Pila",
   "lore": "Texto historia",
-  "btnDownload": "Descargar Carta",
+  "btnDownload": "Descargar Carta..",
   "btnLoading": "Creando Carta..",
   "bench": {
     "info": "- Forja de Adivinación -",
