Base Info Updated

--- a/static/lang/en.json
+++ b/static/lang/en.json
@@ -15,7 +15,7 @@
     "reward": "Delve Item",
     "stack": 6,
     "lore": "Sometimes, the most beautiful treasures...are the ones you cannot have. Beryl, Survivor from the Azurite Mines",
-    "img": "Alone_in_the_Darkness_card_art.png"
+    "img": "Alone_in_the_Darkness_card_art"
   },
   "footer": {
     "madeBy": "Made by the exile Razielini",
