--- a/static/lang/es.json
+++ b/static/lang/es.json
@@ -15,7 +15,7 @@
     "reward": "Item de Delve",
     "stack": 6,
     "lore": "A veces, los tesoros más hermosos... son los que no puedes tener. - Bery, Sobreviviente de las minas de azurita",
-    "img": "Alone_in_the_Darkness_card_art.png"
+    "img": "Alone_in_the_Darkness_card_art"
   },
   "footer": {
     "madeBy": "Hecho por el exiliado Razielini.",
